--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -11,7 +11,7 @@
 body {
   font-family: $main-font;
   line-height: 1.3;
-  background-color: $color-dark;
+  // background-color: $color-dark;
 }
 
 ::-webkit-scrollbar {
