--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -4,6 +4,7 @@
   padding: 0.4rem 0;
 
   .nav-inner {
+    margin-top: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
