--- a/client/src/styles/Meeting.scss
+++ b/client/src/styles/Meeting.scss
@@ -1,5 +1,11 @@
 @import './partials/variables';
 
+.CodeMirror {
+  // min-height: calc(20vh - 20px);
+  height: 250px !important;
+  font-size: 20px;
+  line-height: 1.6;
+}
 #meeting-area {
   height: 90vh;
   display: flex;
