--- a/client/src/styles/Showcase.scss
+++ b/client/src/styles/Showcase.scss
@@ -52,8 +52,9 @@
 
         &:hover {
           background: transparent;
-          border:1px solid white;
           color: #fefefe;
+          background-color: #2a2a72;
+          background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);
         }
 
         @media (max-width: 600px) {
