--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -1,5 +1,5 @@
 $color-primary: #dbe2ef;
-$color-secondary: #64379f;
-$color-dark: #190B28;
+$color-secondary: #4285F4;
+$color-dark: #4285F4;
 $main-font: 'Roboto', sans-serif;
-$logo-font: 'Monsterrat', cursive;
+$logo-font: 'Roboto',sans-serif;
